unpackaged/main/default/objects/Customer_Survey_Response__c/Customer_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Customer Survey Response</label>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Customer Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>