unpackaged/main/default/objects/Customer_Survey_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created to link Dedicated CSM Survey results to Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Survey Responses</relationshipLabel>
    <relationshipName>Customer_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>