unpackaged/main/default/objects/Customer_Survey_Response__c/fields/CSM_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>CSM_Knowledge__c</fullName>
    <description>Field to capture Dedicated CSM Survey results.</description>
    <label>CSM Knowledge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>