unpackaged/main/default/objects/Customer_Survey_Response__c/fields/Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Self_Service__c</fullName>
    <label>Self Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>