unpackaged/main/default/objects/Customer_Survey_Response__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <description>Status of Qualrtics survey.</description>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Reminder Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>